gccida/c3/eliminate_regs_in_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3397:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3397:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3404:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3404:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3406:4: error: expected ';' after expression
rtx v28; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3406:5: error: use of undeclared identifier 'v28'
rtx v28; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3446:4: error: expected ';' after expression
rtx v69; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3446:5: error: use of undeclared identifier 'v69'
rtx v69; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3447:6: error: use of undeclared identifier 'v70'
rtx *v70; // r15 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3448:4: error: expected ';' after expression
rtx v71; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3448:5: error: use of undeclared identifier 'v71'
rtx v71; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3451:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3451:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3452:4: error: expected ';' after expression
rtx v75; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3452:5: error: use of undeclared identifier 'v75'
rtx v75; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3457:6: error: use of undeclared identifier 'v80'
rtx *v80; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3459:6: error: use of undeclared identifier 'fld'
rtx *fld; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3460:6: error: use of undeclared identifier 'v83'
rtx *v83; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/reload1.c:3469:4: error: expected ';' after expression
rtx after; // [rsp+8h] [rbp-240h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/eliminate_regs_in_insn/src/obj/reload1.o] Error 1
